--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,23 +25,45 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.sling</groupId>
-				<artifactId>maven-sling-plugin</artifactId>
+				<artifactId>sling-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<!-- Import any version of javax.inject, to allow running on multiple 
-							versions of AEM -->
-						<Import-Package>javax.inject;version=0.0.0,*</Import-Package>
-						<Sling-Model-Packages>
-							com.mindtree.net.core
-						</Sling-Model-Packages>
-					</instructions>
-				</configuration>
+				<groupId>biz.aQute.bnd</groupId>
+				<artifactId>bnd-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>bnd-process</id>
+						<goals>
+							<goal>bnd-process</goal>
+						</goals>
+						<configuration>
+							<bnd><![CDATA[
+Bundle-Category: CsvProject
+-exportcontents: ${packages;VERSIONED}
+Sling-Model-Packages: com.aem.mindtree.core.models
+-snapshot: ${tstamp;yyyyMMddHHmmssSSS}
+Bundle-DocURL:
+                                ]]></bnd>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
+			<plugin>
+				<groupId>biz.aQute.bnd</groupId>
+				<artifactId>bnd-baseline-maven-plugin</artifactId>
+				<configuration>
+					<failOnMissing>false</failOnMissing>
+				</configuration>
+				<executions>
+					<execution>
+						<id>baseline</id>
+						<goals>
+							<goal>baseline</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
